--- a/loeffelfreunde/index.html
+++ b/loeffelfreunde/index.html
@@ -122,12 +122,29 @@
         </div>
       </div>
       <div class="item">
+        <img src="/imgs/löffelfreunde/weisse_weihnacht.jpg" alt="">
+        <div class="text">
+          <div class="content">
+            Löffelfreude für Löffelfreunde:
+            <h3>WEISSE WEIHNACHT</h3>
+            <br>
+            Ein kulinarisches Geschenk der besonderen Art - wir verschenken ein GEFÜHL, eine Weiße Weihnacht! <br>
+             <br>
+            Eine kräftige, weiße Papiertüte beschriften wir mit einem lieben Gruß, backen <a href="/rezepte/snowball_cookies/" target="_blank">Snowball-Cookies</a>, einen Quarkstollen, gießen weiße Schokolöffel und kaufen viele "WEISSE" Lebensmittel - einen weißen Glühwein, eine weiße Schokocreme, ein schönes SALZ, eingelegten weißen Kandis, Balsamico BIANCO, weiße Dominosteine, einen weißen NIKOLAUS, eine weiße Schokolade, eine Salami mit Edelschimmel.... eine weiße Kerze, und vielleicht legen wir noch Noten oder die CD von "I'm Dreaming of a White Christmas" oder das Buch von Simon Becket "SCHNEEFALL" dazu... <br>
+             <br>
+            Und der Traum der weißen Weihnacht wird Wirklichkeit! <br>
+            MERRY XMAS
+            <!-- <br> -->
+            <!-- <a href="/rezepte/?search=%2523update" target="_blank">Zu den Rezepten</a> -->
+          </div>
+        </div>
+      </div>
+      <div class="item">
         <img src="/imgs/löffelfreunde/schokolöffel.jpg" alt="">
         <div class="text">
           <div class="content">
             <h3>DIY "Weihnachtsglück"</h3><br>
             <br>
-            DIY: <br>
             Man benötigt: <br>
             Holzlöffel <br>
             Washi Tape <br>
@@ -142,11 +159,11 @@
             Architektenpapier oder farbiges Papier <br>
             Schleifenband <br>
             <br>
-            Die Stiele der Löffel mit hübschen Worten beschriften, z.B. Schneeflocke, Kaminfeuer, Winter, Schlittenfahrt, Glöckchen, Engel, ... Mit Streifen von Washi-Tape einrahmen. Schokoladen in verschiedenen Schalen im Wasserbad schmelzen und die Löffel mehrfach nach Farben sortiert eintauchen, bis eine dicke Schicht entsteht. Ist ausreichend Schoki aufgetragen, die Mulden mit Streuseln oder Schokoladenfäden anderer Farben verzieren, trocknen lassen. <br>
+            Die Stiele der Löffel mit hübschen Worten beschriften, z.B. Schneeflocke, KAMINFEUER, Winter, Schlittenfahrt, Glöckchen, Engel, ... Mit Streifen von Washi-Tape einrahmen. Schokoladen in verschiedenen Schalen im Wasserbad schmelzen und die Löffel mehrfach nach Farben sortiert eintauchen, bis eine dicke Schicht entsteht. Ist ausreichend SCHOKI aufgetragen, die Mulden mit Streuseln oder Schokoladenfäden anderer Farben verzieren, trocknen lassen. <br>
             <br>
-            Weihnachtsglück-Spruch entweder mit Hand oder per Drucker auf das Papier bringen, ausschneiden, aufrollen. Löffel in die Tüte stecken, mit Schleifenband, Tannengrün und Papierrolle verschließen. <br>
+            Weihnachtsglück-Spruch entweder mit Hand oder per Drucker auf das Papier bringen, ausschneiden, aufrollen. LÖFFEL in die Tüte stecken, mit Schleifenband, TANNENGRÜN und Papierrolle verschließen. <br>
             <br>
-            Diese kleinen Präsente sind tolle Mitbringsel in der Weihnachtszeit, unerwartete Überraschungen für Nachbarn, Arbeitskollegen und den Postboten. Schreibt man auf die Löffel die Namen eingeladener Gäste, machen sie sich auch prima als Platzkarten. Der Espresso zum Nachtisch erhält beim Umrühren einen mit Liebe zubereiteten Flavour. <br>
+            Diese kleinen Präsente sind tolle Mitbringsel in der Weihnachtszeit, unerwartete ÜBERRASCHUNGEN für Nachbarn, Arbeitskollegen und den Postboten. Schreibt man auf die Löffel die Namen eingeladener Gäste, machen sie sich auch prima als Platzkarten. Der ESPRESSO zum Nachtisch erhält beim Umrühren einen mit Liebe zubereiteten Flavour. <br>
             <br>
             <hr>
             <br>
