--- a/nicole_jette/index.html
+++ b/nicole_jette/index.html
@@ -84,7 +84,7 @@
             <br>
             Neugierig wagt sie sich an allerhand neue Rezepte und experimentiert an eigenen Kreationen. Nur eines müsst Ihr wissen: Ein Kuchen ohne Schokolade ist  <br>
             für Jette kein Kuchen! Passionierte Naschkatze und Zuckerbäckerin. Süß geht immer. Es gibt soooo viele schöne Fotos, die Jette mit blonden Locken und Schokomund zeigen... <br>
-            Wenn ihr aber glaubt, dass Jette auch auf "scharf" steht, ward ihr nicht mit ihr in Thailand! Chili & Pepper heißen unsere Zwergkaninchen. Sie sind sehr zutraulich.  <br>
+            Wenn du aber glaubst, dass Jette auch auf "scharf" steht, warst du nicht mit ihr in Thailand! Chili & Pepper heißen unsere Zwergkaninchen. Sie sind sehr zutraulich.  <br>
             Durch ihre Tolpatschigkeit bringen sie uns immer wieder zum Lachen. Ein tolles Kinoprogramm zur Sommerzeit. Stets freuen sie sich über unsere Gemüseabfälle aus der  <br>
             Küche. Zum Kartoffel schälen und Möhren schrappen setzt sich Jette heute zwar nicht mehr auf die Arbeitsplatte, aber das stumpfe Messer als Relikt vergangener Tage  <br>
             gibt es noch immer. Es ist geblieben wie Jettes Leidenschaft zum Kochen und Backen!<br>
@@ -94,7 +94,7 @@
             Lesen. Ein Muss. Jette liebt Bücher. Die Harry-Potter-Bände hat sie verschlungen, wie die Schokotorte, die zu jedem ihrer Geburtstage ein Muss ist. <br>
             Rezepte aus der Zauberküche lieben wir. Die Schnee-Eule Hedwig und ihre Freunde sind uns jedoch in den Schokotopf geplumpst. Für kleine Kesselkuchen, <br>
             eine Siruptorte und Hackbällchen mit Preiselbeer-Dip haben wir bereits neue Ideen.<br>
-            Jette strotzt vor Kreativität. Malen. Basteln. Fotografieren. Auf ihre selbstgebastelten Geschenke freue ich mich, seit sie klein ist. Ihre selbstgemachten Pralinen <br>
+            Jette strotzt vor Kreativität. Malen. Basteln. Fotografieren. Auf ihre selbstgemachten Geschenke freue ich mich, seit sie klein ist. Ihre selbstgedrehten Pralinen <br>
             sind ein Traum. Kaminkonfekt. Im völligen Gegensatz dazu steht ihre Gabe zum logischen Denken. Plutimikation. Als ob die Schultüte ihren Weg bestimmte. <br>
             Mit Maßeinheiten kennt sie sich nicht nur in der Küche aus, aber eben auch - Löffel für Löffel. Welch GLÜCK für uns!
           </div>
@@ -174,19 +174,28 @@
         <img src="/imgs/nicole_jette/antrieb.jpg" alt="">
         <div class="text">
           <div class="content">
-            Auf dem (Küchen)BODEN der Tatsachen liegt eindeutig zu wenig <br>
+            Auf dem (Küchen-)BODEN der Tatsachen <br>
+            liegt eindeutig zu wenig <br>
             <br>
             <h3>GLITZER...</h3>
             <br>
-            Unser Glitzer sind GUTE ZUTATEN! Wir achten sehr genau darauf, woher unsere Lebensmittel stammen. Gemüse ernten wir natürlich am liebsten in Opas Garten. Für alles andere schätzen wir kurze Wege und persönliche Kontakte. Das ist das Wunderbare auf dem Land - man kennt sich! Wir wissen, wo und wie die Tiere leben, die wir verzehren, können sie jederzeit besuchen LINK BIOLAND HARTMANN. Eier gibt's im HOFLADEN LINK WILDHÄUSER HOF. Artgerechte Haltung. Stammen die Fische nicht aus Nachbars Forellenteich, achten wir auf Labels für nachhaltige Fischerei. Auch kleine Käsereien garantieren Vielfalt und Frische. LINK SCHAUKÄSEREI MENNE: JAKOBSBERGER MILCHHANDWERKER. Aus der Ölmühle am Solling beziehen wir tolle, selbstgepresste Öle LINK ÖLMÜHLE SOLLING und viele Hobby-Imker zählen zu unseren Freunden. Gemüse kaufen wir gern auf dem Wochenmarkt oder bei unserem Bio-Bauern vor Ort LINK BRAKELER GEMÜSE; ENGEMANN. Aus REGIONAL folgt SAISONAL! Exotische Zutaten sind bei uns eher die Ausnahme.
+            Unser Glitzer sind GUTE ZUTATEN!<br>
+            Wir achten sehr genau darauf, woher unsere Lebensmittel stammen. Gemüse ernten wir natürlich am liebsten in Opas Garten. Für alles andere schätzen wir kurze Wege und persönliche Kontakte. Das ist das Wunderbare auf dem Land - man kennt sich! <br>
+            Wir wissen, wo und wie die Tiere leben, die wir verzehren, können sie jederzeit im Stall besuchen. Eier gibt's im HOFLADEN. Artgerechte Haltung. Stammen die Fische nicht aus Nachbars Forellenteich, achten wir auf Labels für nachhaltige Fischerei. Auch kleine Käsereien garantieren Vielfalt und Frische. Aus der Ölmühle am Solling beziehen wir tolle, selbstgepresste Öle und viele Hobby-Imker zählen zu unseren Freunden. Gemüse kaufen wir gern auf dem Wochenmarkt oder bei unserem Bio-Bauern vor Ort. <br>
+            Aus REGIONAL folgt SAISONAL! <br>
+            Exotische Zutaten sind bei uns eher die Ausnahme.<br>
+            <br>
 
             Die Zubereitung von Essen ist für Nicole nicht nur eine Herzensangelegenheit, es ist eine HALTUNG. Den Respekt Pflanzen und Tieren gegenüber, die Wertschätzung von Mutter Erde möchte sie gern an Jette und Moritz weitergeben. Das ist ihr großer Antrieb.<br>
             <br>
             <h3>FUNKENSPRÜHEN. STERNEKÜCHE.</h3>
             <br>
-            Wir sprühen über vor lauter Ideen! Plötzlich haben wir sie einfach im Kopf, die Rezepte! Dann wird ausprobiert. INSPIRIERT sind sie natürlich der saisonalen Ernte oder dem Heißhunger der Familie... Aber auch das abendfüllende Blättern in Kochbüchern und -zeitschriften liefert allerhand Anregungen. In Kombination mit alten FAMILIENREZEPTEN von Oma finden wir immer etwas, das uns schmeckt. GEMEINSAM diskutieren wir dann über die Anzahl der Sterne, die wir dem Ergebnis verleihen. Mit diesem Blog ist unsere kleine, private Sternenküche nun nicht mehr so klein und privat - alle hier präsentierten Rezepte haben vom Familienrat drei bis fünf Sterne erzielt.
-
-            Wir hoffen, Du hast viel Spaß auf unserer Seite, findest das eine oder andere Rezept, das Dir gefällt, eine Anregung, die inspiriert und vielleicht schaust Du ab und zu einmal vorbei. Wir freuen uns über jeden Kommentar, jede Kritik, besonders natürlich über ein winziges Lob und wünschen viel FREUDE BEIM STÖBERN - wir wünschen von Herzen LÖFFELWEISE GLÜCK!<br>
+            Wir sprühen über vor lauter Ideen! <br>
+            Plötzlich haben wir sie einfach im Kopf, die Rezepte! Dann wird ausprobiert. INSPIRIERT sind sie natürlich von der saisonalen Ernte oder dem Heißhunger der Familie... Aber auch das abendfüllende Blättern in Kochbüchern und -zeitschriften liefert allerhand Anregungen. In Kombination mit alten FAMILIENREZEPTEN von Oma finden wir immer etwas, das uns schmeckt. Wir diskutieren GEMEINSAM dann über die Anzahl der Sterne, die wir dem Ergebnis verleihen. Mit diesem Blog ist unsere kleine, private Sterneküche nun nicht mehr so klein und privat - alle hier präsentierten Rezepte haben vom Familienrat drei bis fünf Sterne erzielt...<br>
+            <br>
+            Wir hoffen, Du hast viel Spaß auf unserer Seite, findest das eine oder andere Rezept, das Dir gefällt, eine Anregung, die inspiriert und vielleicht schaust Du ab und zu einmal vorbei. Wir freuen uns über jeden Kommentar, jede Kritik, besonders natürlich über ein winziges Lob und wünschen viel FREUDE BEIM STÖBERN - wir wünschen von Herzen<br>
+            <br>
+            LÖFFELWEISE GLÜCK!<br>
             <br>
             Jette & Nicole <br>
             <br>
