Rechtschreibfehler "wilkommen" > "willkommen" behoben

--- a/geschichten/index.html
+++ b/geschichten/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div id="navbar">
-      <a href="..">wilkommen.</a>
+      <a href="..">willkommen.</a>
       <a href="/rezepte">rezepte.</a>
       <a href="#">geschichten.</a>
       <a href="/nicole_jette">nicole & jette.</a>
