--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <img src="/imgs/logo-pappe.svg" alt="logo" id="logo">
     <div id="navbar">
-      <a href="#">wilkommen.</a>
+      <a href="#">willkommen.</a>
       <a href="/rezepte">rezepte.</a>
       <a href="/geschichten">geschichten.</a>
       <a href="/nicole_jette">nicole & jette.</a>
