--- a/nicole_jette/index.html
+++ b/nicole_jette/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div id="navbar">
-      <a href="..">wilkommen.</a>
+      <a href="..">willkommen.</a>
       <a href="/rezepte">rezepte.</a>
       <a href="/geschichten">geschichten.</a>
       <a href="#">nicole & jette.</a>
