--- a/rezeptgalerie/index.html
+++ b/rezeptgalerie/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="navbar">
-      <a href="..">wilkommen.</a>
+      <a href="..">willkommen.</a>
       <a href="/rezepte">rezepte.</a>
       <a href="/geschichten">geschichten.</a>
       <a href="/ueber-uns">über uns.</a>
