--- a/rezepte/pilz-päckchen/index.html
+++ b/rezepte/pilz-päckchen/index.html
@@ -5,26 +5,47 @@
     <title>Rezept - Löffelweise Glück</title>
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/rezepte/rezept.css">
+    <link rel="stylesheet" href="/styles/fontawesome.css">
     <script src="/scripts/util/recipe.js" defer charset="utf-8"></script>
   </head>
   <body>
-    <div id="navbar">
-      <a href=".." id="back">Zurück zu den Rezepten</a>
-      <h3 id="name"></h3>
+    <div id="page">
+      <div id="navbar">
+        <a href=".." id="back">Zurück zu den Rezepten</a>
+        <h3 class="name"></h3>
+      </div>
+      <div class="container">
+        <img src="">
+        <div class="zutaten">
+
+        </div>
+        <div class="zubereitung">
+
+        </div>
+        <div class="kommentar">
+
+        </div>
+        <div class="tags">
+
+        </div>
+      </div>
+      <button type="button" id="printBtn" title="Das Rezept für später ausdrucken..."><i class="fas fa-print"></i></button>
     </div>
-    <div id="container">
-      <div id="zutaten">
+    <div id="print">
+      <h3 class="name"></h3>
+      <div class="container">
+        <img src="">
+        <div class="zutaten">
 
-      </div>
-      <div id="zubereitung">
+        </div>
+        <div class="zubereitung">
 
-      </div>
-      <div id="kommentar">
+        </div>
+        <div class="kommentar">
 
+        </div>
       </div>
-      <div id="tags">
 
-      </div>
     </div>
   </body>
 </html>
