--- a/geschichten/index.html
+++ b/geschichten/index.html
@@ -76,6 +76,22 @@
         </div>
       </div>
       <div class="geschichte">
+        <img src="/imgs/geschichten/grünkohl.jpg" alt="">
+        <div class="text">
+          <div class="content">
+            Auch der Weg ist das Ziel...<br>
+            <br>
+            <h3>KOHL-UND-PINKEL-TOUR</h3>
+            <br>
+            Wenn du uns im Januar oder Februar gut gelaunt mit BOLLERWAGEN und vielen lieben Freunden, Kind und Kegel, auf Feldwegen triffst, eingemummelt in dicke Winterjacken, mit langem Schal und BOMMELMÜTZE, einem Punsch oder heißen Kakao in der Hand, kleinen Köstlichkeiten im Rucksack - schließe dich uns an! Bestimmt sind wir auf dem Weg zum Grünkohlessen... Denn Grünkohl liebt die Kälte und schmeckt nach dem ERSTEN FROST am besten.  <br>
+            <br>
+            Ostwestfälisch kühl, Nieselregen, Schnee. Nichts hält uns ab, zu diesem fast 150 JAHRE ALTEN BRAUCH - neben uns in Ostwestfalen lebt man ihn auch in Norddeutschland, in Teilen Skandinaviens und in den Niederlanden - zu starten! Es geht nicht darum, zackig zur Gaststätte im Nachbarort zu gelangen, wo der Grünkohl serviert wird. Nein, es geht um eine schöne Zeit an der frischen Winterluft mit unseren LIEBLINGSMENSCHEN an der Seite. Deshalb halten wir immer 'mal wieder an, um gemeinsam zu trinken, zu naschen, zu lachen. Der Bollerwagen transportiert nicht nur kleine Kinder... Ältere werden mit kleinen Spielen zu großen Märschen animiert und wachsen. "Ein Hut, ein Stock, ein Re-gen-schirm! Und: Vorwärts, rückwärts, seitwärts, 'ran, hoch, 'runter, zick-zack!". Quer durch den Wald. Am FORSTHAUS vorbei. Enlang an Bächen. Über die Brücke. Hat man den steilen Berg erklommen, ist das Ziel im Visier. Für Frostbeulen wärmstens zu empfehlen - der Klassiker geht immer, den mag jeder, der verbindet. Kein Wunder also, dass sich alle Wanderer ZUFRIEDEN in den Armen liegen, wenn der Grünkohl, die gerösteten kleinen Kartöffelchen, Kasseler, Kohlwurst und viele, viele LÖFFEL SENF verspeist sind! Wir lieben unsere Tradition und pflegen sie seit Jahrzehnten; immer wieder kleines GLÜCK...
+
+
+          </div>
+        </div>
+      </div>
+      <div class="geschichte">
         <img src="/imgs/geschichten/lavendel.jpg" alt="">
         <div class="text">
           <div class="content">
@@ -110,30 +126,6 @@
             Welch GLÜCK für uns und unsere Freunde....<br>
             <br>
             <a href="/rezepte/?search=%2523picknick" target="_blank">Zu den Rezepten</a>
-          </div>
-        </div>
-      </div>
-      <div class="geschichte">
-        <img src="/imgs/geschichten/mini.jpg" alt="">
-        <div class="text">
-          <div class="content">
-            <h3>WEIHNACHTEN ZU HAUSE...</h3>
-            <br>
-            <br>
-            ...und ich werde an Weihnachten nach Hause kommen.<br>
-            Wir alle tun das und sollten es tun.<br>
-            Für eine kurze Rast, je länger desto besser, um Ruhe zu aufzunehmen und zu geben. <br>
-            (Charles Dickens) <br>
-            <br>
-            Für Nicole ist die Weihnachtszeit die schönste Zeit des Jahres und ein bisschen ist sie es auch für Jette. WELTJAHRESBESTZEIT! Es ist die Rast in der Familie. Wir alle lieben diese besondere Zeit der Bräuche und Traditionen, der Lieder und Geschichten, des Kerzenscheins und Plätzchendufts, der Wunschzettel und Geheimnisse... Die schönste Art des Wartens ist und bleibt die VORFREUDE! <br>
-            <br>
-            <h3>UNSER TANNENBAUM</h4> <br>
-            Alle Jahre wieder haben wir tatsächlich das große GLÜCK, uns frühzeitig in einer Schonung unseren Tannenbaum aussuchen, ihn dann ein paar Tage vor Weihnachten selbst schlagen und feierlich nach Hause geleiten zu können. Alle Jahre wieder zelebrieren wir diesen Brauch gemütlich mit heißem Apfelpunsch & Glühwein, köstlichen Keksen und einer ordentlichen Portion Vorfreude auf das große Fest. Wir lieben unseren Tannenbaum! Wir lieben es, ihn gemeinsam zu schmücken, ihn zu besingen, zu bestaunen und ihm seinen Platz in unserer Mitte zu geben - mit all seinem Glanz, seiner Hoffnung, seines Friedens und seiner Freude! Auch wenn farblich viele verschiedene Konfektionen für das Kleid unseres Baumes in den Kisten warten, so schmücken wir ihn eigentlich alle Jahre wieder - skandinavisch klassisch - in rot & weiß. Und alle Jahre wieder kaufen wir ein paar ganz besondere Schmuckstücke, die uns eine Geschichte erzählen und ihn zu unserem ganz persönlichen Weihnachtsbaum machen. In diesem besonderen Jahr 2020 werden wir dankbar vier weiße Porzellan-Löffel an die Zweige hängen, wir haben allen Grund dazu: viel mehr als GLÜCK - Segen! <br>
-            <br>
-            <h3>WEIHNACHTSBÄCKEREI <br> MIT OMA & OPA </h4><br>
-            Während Nicole die Kisten mit der Weihnachtsdekoration aus dem Keller holt, stöbert Jette bereits in sämtlichen Backbüchern und ihren Aufzeichnungen, welche Weihnachtsplätzchen es in diesem Jahr in die Top 10 der Keksdosen schafft. Außer Konkurrenz rangiert das Spritzgebäck von Oma und Opa auf dem allerersten Platz - und das schon, seit Nicole noch ein kleines Kind war. Eine liebgewonnene Tradition: Jette und ihr Bruder Moritz backen jedes Jahr wieder bei und mit den Großeltern für die gesamten Familien - Spritzgebäck aus 2,5 kg Mehl! Dabei wird in der Weihnachtsbäckerei ganz fortschrittlich in Arbeitsteilung gewerkelt. Während sich Oma und Jette um das Herstellen des Teigs kümmern, bringen Opa und Moritz den Fleischwolf in Position und den Backofen auf Betriebstemperatur. Die Technik ist eben Männersache! Und wenn der Teig zwei Spielrunden "Rummikub" im Kühlschrank verweilt hat, schreitet die Mannschaft zur Tat: Opa dreht den Fleischwolf, Jette und Moritz schneiden die Teigstücke ab und platzieren sie abwechselnd auf den Blechen, sorgen für Teig-Nachschub. Oma bedient Ofen und Auskühlgitter und startet bereits mit der Schokoglasur - Fließbandarbeit par Excellance! Aufgrund von Corona war dieses Jahr ein gemeinsames Backen nicht möglich, Oma & Opa haben es dieses Jahr leider allein gemacht. Unsere Freude war riesengroß, als zum ersten Advent plötzlich zwei prall gefüllte Dosen mit den "weltbesten Weihnachtsplätzchen" vor unserer Haustür standen... unerwartetes WEIHNACHTSGLÜCK! <br>
-            <br>
-            <a href="/rezepte/?search=%2523weihnachten" target="_blank">Zu den Rezepten</a>
           </div>
         </div>
       </div>
@@ -221,6 +213,41 @@
             <br>
             <a href="/rezepte/?search=%2523krimidinner" target="_blank">Zu den Rezepten</a>
 
+          </div>
+        </div>
+      </div>
+      <div class="geschichte">
+        <img src="/imgs/geschichten/hai.jpg" alt="">
+        <div class="text">
+          <div class="content">
+            <h3>DENKSTE?!</h3>
+            <br>
+            LÖFFEL sind gefährlicher als HAIE. <br>
+            Laut Statistik sterben jährlich durchschnittlich SECHS Menschen durch einen Haiangriff - an einem Löffel ersticken ZEHN.
+          </div>
+        </div>
+      </div>
+      <div class="geschichte">
+        <img src="/imgs/geschichten/mini.jpg" alt="">
+        <div class="text">
+          <div class="content">
+            <h3>WEIHNACHTEN ZU HAUSE...</h3>
+            <br>
+            <br>
+            ...und ich werde an Weihnachten nach Hause kommen.<br>
+            Wir alle tun das und sollten es tun.<br>
+            Für eine kurze Rast, je länger desto besser, um Ruhe zu aufzunehmen und zu geben. <br>
+            (Charles Dickens) <br>
+            <br>
+            Für Nicole ist die Weihnachtszeit die schönste Zeit des Jahres und ein bisschen ist sie es auch für Jette. WELTJAHRESBESTZEIT! Es ist die Rast in der Familie. Wir alle lieben diese besondere Zeit der Bräuche und Traditionen, der Lieder und Geschichten, des Kerzenscheins und Plätzchendufts, der Wunschzettel und Geheimnisse... Die schönste Art des Wartens ist und bleibt die VORFREUDE! <br>
+            <br>
+            <h3>UNSER TANNENBAUM</h4> <br>
+            Alle Jahre wieder haben wir tatsächlich das große GLÜCK, uns frühzeitig in einer Schonung unseren Tannenbaum aussuchen, ihn dann ein paar Tage vor Weihnachten selbst schlagen und feierlich nach Hause geleiten zu können. Alle Jahre wieder zelebrieren wir diesen Brauch gemütlich mit heißem Apfelpunsch & Glühwein, köstlichen Keksen und einer ordentlichen Portion Vorfreude auf das große Fest. Wir lieben unseren Tannenbaum! Wir lieben es, ihn gemeinsam zu schmücken, ihn zu besingen, zu bestaunen und ihm seinen Platz in unserer Mitte zu geben - mit all seinem Glanz, seiner Hoffnung, seines Friedens und seiner Freude! Auch wenn farblich viele verschiedene Konfektionen für das Kleid unseres Baumes in den Kisten warten, so schmücken wir ihn eigentlich alle Jahre wieder - skandinavisch klassisch - in rot & weiß. Und alle Jahre wieder kaufen wir ein paar ganz besondere Schmuckstücke, die uns eine Geschichte erzählen und ihn zu unserem ganz persönlichen Weihnachtsbaum machen. In diesem besonderen Jahr 2020 werden wir dankbar vier weiße Porzellan-Löffel an die Zweige hängen, wir haben allen Grund dazu: viel mehr als GLÜCK - Segen! <br>
+            <br>
+            <h3>WEIHNACHTSBÄCKEREI <br> MIT OMA & OPA </h4><br>
+            Während Nicole die Kisten mit der Weihnachtsdekoration aus dem Keller holt, stöbert Jette bereits in sämtlichen Backbüchern und ihren Aufzeichnungen, welche Weihnachtsplätzchen es in diesem Jahr in die Top 10 der Keksdosen schafft. Außer Konkurrenz rangiert das Spritzgebäck von Oma und Opa auf dem allerersten Platz - und das schon, seit Nicole noch ein kleines Kind war. Eine liebgewonnene Tradition: Jette und ihr Bruder Moritz backen jedes Jahr wieder bei und mit den Großeltern für die gesamten Familien - Spritzgebäck aus 2,5 kg Mehl! Dabei wird in der Weihnachtsbäckerei ganz fortschrittlich in Arbeitsteilung gewerkelt. Während sich Oma und Jette um das Herstellen des Teigs kümmern, bringen Opa und Moritz den Fleischwolf in Position und den Backofen auf Betriebstemperatur. Die Technik ist eben Männersache! Und wenn der Teig zwei Spielrunden "Rummikub" im Kühlschrank verweilt hat, schreitet die Mannschaft zur Tat: Opa dreht den Fleischwolf, Jette und Moritz schneiden die Teigstücke ab und platzieren sie abwechselnd auf den Blechen, sorgen für Teig-Nachschub. Oma bedient Ofen und Auskühlgitter und startet bereits mit der Schokoglasur - Fließbandarbeit par Excellance! Aufgrund von Corona war dieses Jahr ein gemeinsames Backen nicht möglich, Oma & Opa haben es dieses Jahr leider allein gemacht. Unsere Freude war riesengroß, als zum ersten Advent plötzlich zwei prall gefüllte Dosen mit den "weltbesten Weihnachtsplätzchen" vor unserer Haustür standen... unerwartetes WEIHNACHTSGLÜCK! <br>
+            <br>
+            <a href="/rezepte/?search=%2523weihnachten" target="_blank">Zu den Rezepten</a>
           </div>
         </div>
       </div>
