--- a/leseglueck/index.html
+++ b/leseglueck/index.html
@@ -53,8 +53,9 @@
             <br>
             Dieses Buch ist eine Liebeserklärung an die kalte Jahreszeit. <br>
             Während draußen die Welt in einen riesigen Wattebausch gehüllt ist, wird es drinnen am Kamin gemütlich. Ruhe kehrt ein ins Zuhause und in die Herzen. Die drei Autorinnen nehmen uns mit auf eine kulinarische Reise in ihre Winterküche und in die einzigartige Landschaft von Lappland. Ausgewählte Rezepte und beeindruckende Fotos laden ein zum Zurücklehnen und Genießen. Das Buch "HELLO SNOW. Kochen. Lesen. Genießen." ist im Verlag Thorbecke erschienen. <br>
-
-            JULIA CAWLEY. SASKIA VAN DEELEN. VERA SCHAPER. <br>
+            <br>
+            <h3>JULIA CAWLEY. SASKIA VAN DEELEN. VERA SCHAPER.</h3>
+            <br>
             Julia ist gelernte Fotografin und studierte Foto-Design. Nach fünf Jahren in New York lebt sie mittlerweile mit ihrem Mann und ihren zwei Töchtern in Hamburg. Ihre große Leidenschaft ist das Thema ESSEN. In ihren Projekten fotografiert sie es nicht nur, sie kocht es, inszeniert es, serviert und genießt es... In Kooperation mit anderen Autoren hat sie bereits an vielen Kochbüchern mitgewirkt. <br>
 
             Saskia studierte zwar Betriebswirtschaftslehre, arbeitet heute jedoch als Ernährungsberaterin in Hamburg. Ihre unerschöpfliche Kreativität lebt sie mit der Entwicklung von Rezepten aus und schreibt mit Leidenschaft in ihrem Food-Blog "Dee's Küche", der ursprünglich als Kochbuch für ihre erwachsenen Kinder gedacht war. <br>
@@ -63,7 +64,7 @@
             <br>
             <h3>BUCHAUFBAU</h3>
             <br>
-            Weiß wie Schnee ist die vorherrschende Farbe des Buches nicht nur auf dem Cover, sondern auch auf jeder künstlerisch gestalteten Innenseite. Die Fotos aus Lappland zeigen frostige Landschaften, mit Schnee gepuderte Tannen, eingeschneite Hütten, Rentiere und ihre Schlitten. Das Food wird stets mit weißem Geschirr auf weißem Hintergrund präsentiert. Auch liebevoll arrangierte Stillleben greifen die Farbe Weiß auf. Sie bestimmt die Stimmung des Buches - hell, festlich, friedlich. Ein <br> Buch, um zur Ruhe zu kommen und vielfältige Leckereien des Winter zu probieren. <br>
+            Weiß wie Schnee ist die vorherrschende Farbe des Buches nicht nur auf dem Cover, sondern auch auf jeder künstlerisch gestalteten Innenseite. Die Fotos aus Lappland zeigen frostige Landschaften, mit Schnee gepuderte Tannen, eingeschneite Hütten, Rentiere und ihre Schlitten. Das Food wird stets mit weißem Geschirr auf weißem Hintergrund präsentiert. Auch liebevoll arrangierte Stillleben greifen die Farbe Weiß auf. Sie bestimmt die Stimmung des Buches - hell, festlich, friedlich. Ein Buch, um zur Ruhe zu kommen und vielfältige Leckereien des Winter zu probieren. <br>
 
             1. VORWORT: Über leise fallende Flocken, taube Zehen & eingefrorene Nasen. Eiskristalle glitzern. Ein Wintermärchen. Entschleunigung. Natur im Winterschlaf. <br>
             2. LECKERES NACH DEM WINTERSPAZIERGANG: In Bildern und Erzählungen nehmen uns die Autorinnen mit in die weite, weiße Landschaft, machen mit uns eine Schneeballschlacht und wärmen uns auf mit heißem Punsch & Apfeltarte. Das weiche Fell der Rentiere möchte man am liebsten streicheln. <br>
