--- a/rezepte/index.html
+++ b/rezepte/index.html
@@ -42,6 +42,8 @@
     <div id="searchContainer">
       <label for="search">Suchbegriff eingeben</label>
       <span>
+        <button type="button" id="sortOrder" title="Chronologisch absteigend
+        " data-sort="0">Aktuell</button>
         <input type="text" id="search" class="deletable" placeholder="#Geburtstag" autofocus>
         <button type="button" id="delete-search" title="Suche löschen"><i class="fas fa-times"></i></button>
       </span>
