Kleine Änderungen & Bildslider bei Geschichten hinzugefügt

--- a/geschichten/index.html
+++ b/geschichten/index.html
@@ -71,7 +71,9 @@
             Wo einst Jettes Ururgroßvater Josef Möbel mit dem Hobel bearbeitete und die Spähne flog, wird heute KÄSE & GEMÜSE gehobelt. <br>
             Auf Küchenparties nimmt sie gern das Buffet auf.<br>
             Und wir freuen uns besonders, dass Sie unseren Fotografien einen ganz einzigartigen Rahmen bietet! <br>
-            Welch GLÜCK für uns...
+            Welch GLÜCK für uns...<br>
+            <br>
+            <a href="/rezepte/?search=%2523hobel" target="_blank">Zu den Rezepten</a>
           </div>
         </div>
       </div>
@@ -86,8 +88,9 @@
             Wenn du uns im Januar oder Februar gut gelaunt mit BOLLERWAGEN und vielen lieben Freunden, Kind und Kegel, auf Feldwegen triffst, eingemummelt in dicke Winterjacken, mit langem Schal und BOMMELMÜTZE, einem Punsch oder heißen Kakao in der Hand, kleinen Köstlichkeiten im Rucksack - schließe dich uns an! Bestimmt sind wir auf dem Weg zum Grünkohlessen... Denn Grünkohl liebt die Kälte und schmeckt nach dem ERSTEN FROST am besten.  <br>
             <br>
             Ostwestfälisch kühl, Nieselregen, Schnee. Nichts hält uns ab, zu diesem fast 150 JAHRE ALTEN BRAUCH - neben uns in Ostwestfalen lebt man ihn auch in Norddeutschland, in Teilen Skandinaviens und in den Niederlanden - zu starten! Es geht nicht darum, zackig zur Gaststätte im Nachbarort zu gelangen, wo der Grünkohl serviert wird. Nein, es geht um eine schöne Zeit an der frischen Winterluft mit unseren LIEBLINGSMENSCHEN an der Seite. Deshalb halten wir immer 'mal wieder an, um gemeinsam zu trinken, zu naschen, zu lachen. Der Bollerwagen transportiert nicht nur kleine Kinder... Ältere werden mit kleinen Spielen zu großen Märschen animiert und wachsen. "Ein Hut, ein Stock, ein Re-gen-schirm! Und: Vorwärts, rückwärts, seitwärts, 'ran, hoch, 'runter, zick-zack!". Quer durch den Wald. Am FORSTHAUS vorbei. Enlang an Bächen. Über die Brücke. Hat man den steilen Berg erklommen, ist das Ziel im Visier. Für Frostbeulen wärmstens zu empfehlen - der Klassiker geht immer, den mag jeder, der verbindet. Kein Wunder also, dass sich alle Wanderer ZUFRIEDEN in den Armen liegen, wenn der Grünkohl, die gerösteten kleinen Kartöffelchen, Kasseler, Kohlwurst und viele, viele LÖFFEL SENF verspeist sind! Wir lieben unsere Tradition und pflegen sie seit Jahrzehnten; immer wieder kleines GLÜCK...
-
-
+            <br>
+            <br>
+            <a href="/rezepte/?search=%2523kohltour" target="_blank">Zu den Rezepten</a>
           </div>
         </div>
       </div>
@@ -112,7 +115,9 @@
         </div>
       </div>
       <div class="geschichte">
-        <img src="/imgs/geschichten/waldpicknick.jpg" alt="">
+        <!-- <div class="img"> -->
+          <img src="/imgs/geschichten/waldpicknick.jpg" alt="">
+        <!-- </div> -->
         <div class="text">
           <div class="content">
             <h3>WALDPICKNICK - <br>Geniessen unter Freunden</h3>
@@ -151,7 +156,9 @@
             Ein DICKES DANKESCHÖN an all unsere Friends'R Family für diese kostbaren GESCHENKE!<br>
             Da wir während des Lockdowns der Corona-Pandemie leider keine Gäste empfangen durften, haben wir zu Ostern 2020 einen eigenen, ganz besonderen Zettel aufgehängt.<br>
             "Unser Rezept gegen Corona: #WirBleibenZuhause"<br>
-            Bisher hat es geholfen. Welch GLÜCK...
+            Bisher hat es geholfen. Welch GLÜCK...<br>
+            <br>
+            <a href="/rezepte/?search=%2523zettelZ" target="_blank">Zu den Rezepten</a>
 
 
           </div>
