--- a/nicole_jette/index.html
+++ b/nicole_jette/index.html
@@ -181,7 +181,7 @@
             <br>
             Unser Glitzer sind GUTE ZUTATEN!<br>
             Wir achten sehr genau darauf, woher unsere Lebensmittel stammen. Gemüse ernten wir natürlich am liebsten in Opas Garten. Für alles andere schätzen wir kurze Wege und persönliche Kontakte. Das ist das Wunderbare auf dem Land - man kennt sich! <br>
-            Wir wissen, wo und wie die Tiere leben, die wir verzehren, können sie jederzeit im Stall besuchen. Eier gibt's im HOFLADEN. Artgerechte Haltung. Stammen die Fische nicht aus Nachbars Forellenteich, achten wir auf Labels für nachhaltige Fischerei. Auch kleine Käsereien garantieren Vielfalt und Frische. Aus der Ölmühle am Solling beziehen wir tolle, selbstgepresste Öle und viele Hobby-Imker zählen zu unseren Freunden. Gemüse kaufen wir gern auf dem Wochenmarkt oder bei unserem Bio-Bauern vor Ort. <br>
+            Wir wissen, wo und wie die Tiere leben, die wir verzehren, können sie jederzeit im Stall besuchen. Eier gibt's im HOFLADEN. Artgerechte Haltung. Stammen die Fische nicht aus Nachbars Forellenteich, achten wir auf Label für nachhaltige Fischerei. Auch kleine Käsereien garantieren Vielfalt und Frische. Aus der Ölmühle am Solling beziehen wir tolle, selbstgepresste Öle und viele Hobby-Imker zählen zu unseren Freunden. Gemüse kaufen wir gern auf dem Wochenmarkt oder bei unserem Bio-Bauern vor Ort. <br>
             Aus REGIONAL folgt SAISONAL! <br>
             Exotische Zutaten sind bei uns eher die Ausnahme.<br>
             <br>
