--- a/datenschutz-impressum/index.html
+++ b/datenschutz-impressum/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Datenschutz - Impressum</title>
+    <link rel="icon" type="image/svg" href="/imgs/favicon.svg"/>
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/datenschutz-impressum.css">
     <script src="/scripts/datenschutz-impressum.js" defer charset="utf-8"></script>
