--- a/leseglueck/index.html
+++ b/leseglueck/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Leseglück</title>
+    <link rel="icon" type="image/svg" href="/imgs/favicon.svg"/>
     <link rel="stylesheet" href="/styles/fontawesome.css">
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/leseglück.css">
