--- a/loeffelfreunde/index.html
+++ b/loeffelfreunde/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Löffelfreu(n)de</title>
+    <link rel="icon" type="image/svg" href="/imgs/favicon.svg"/>
     <link rel="stylesheet" href="/styles/fontawesome.css">
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/löffelfreunde.css">
@@ -74,7 +75,7 @@
             <br>
             <h4>BLATTSALATE</h4>
             Vor der Berührung mit der Sauce - eine Vinaigrette lässt den Salaten am besten den Eigengeschmack - sollten die Blätter trocken sein. Wir trocknen sie gern in unserer Salatschleuder, aber auch "trockenlegen" mit einem Küchentuch funktioniert prima. So nehmen sie den Geschmack besser an. <br>
-            Wichtig ebenfalls: Die Sauce erst unmittelbar vor dem Servieren unterziehen, sonst fällt der Salat zusammen und wird weich. 
+            Wichtig ebenfalls: Die Sauce erst unmittelbar vor dem Servieren unterziehen, sonst fällt der Salat zusammen und wird weich.
           </div>
         </div>
       </div>
