--- a/rezeptgalerie/index.html
+++ b/rezeptgalerie/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Rezeptgalerie</title>
+    <link rel="icon" type="image/svg" href="/imgs/favicon.svg"/>
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/rezeptgalerie.css">
     <script src="/scripts/rezeptgalerie.js" defer charset="utf-8"></script>
