--- a/nicole_jette/index.html
+++ b/nicole_jette/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Über uns</title>
+    <link rel="icon" type="image/svg" href="/imgs/favicon.svg"/>
     <link rel="stylesheet" href="/styles/fontawesome.css">
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/nicole_jette.css">
