--- a/rezepte/bunter-focaccia-garten/index.html
+++ b/rezepte/bunter-focaccia-garten/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Rezept - Löffelweise Glück</title>
+    <link rel="icon" type="image/svg" href="/imgs/favicon.svg"/>
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/rezepte/rezept.css">
     <link rel="stylesheet" href="/styles/fontawesome.css">
