--- a/rezeptgenerator/index.html
+++ b/rezeptgenerator/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Rezeptgenerator</title>
+    <link rel="icon" type="image/svg" href="/imgs/favicon.svg"/>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer charset="utf-8"></script>
   </head>
