Artikel zu Nicole & Jette, Geschichten, Leseglück & Löffelfreunde hinzugefügt

--- a/geschichten/index.html
+++ b/geschichten/index.html
@@ -107,6 +107,27 @@
       </div>
     </div>
     <div class="geschichte">
+      <img src="/imgs/geschichten/rhabarberbarbara.jpg" alt="">
+      <div class="text">
+        <div class="content">
+          <h3>RHA <br>
+                    BAR <br>
+                    BER</h3>
+                    Barbara <br>
+                    <br>
+
+
+              Wenn im Sommer aus den zarten Stängeln des Rhabarbers riesige Blätterpalmen erwachsen, wächst auch in uns die Freude, uns die wunderbare Geschichte von Barbara und ihrem leckeren Rhabarberkuchen zu erzählen. Doch das ist gar nicht so einfach! Wie war das noch? Rhabarbara, Bartbiere, ... ach herrje! Prima, dass wir beim Putzen und Schnippeln unserer Rhabarberberge und der Zubereitung unserer geliebten Rhabarber-Spezialitäten sooooooooo viel Zeit haben, Wortakrobatik & Zungenbrecher rund um Barbara, Bärbel und ihre Freunde perfekt zu üben! Probier auch du dein Glück mit Hilfe des kleinen <a href="https://www.youtube.com/watch?v=gG62zay3kck" target="_blank">animierten Films...</a> <br>
+ <br>
+              Rhabarberbarbarabarbarenbartbarbierbierbärbelbar <br>
+
+
+            <br>
+            <a href="/rezepte/?search=%2523rhabarbara" target="_blank">Zu den Rezepten</a>
+        </div>
+      </div>
+    </div>
+    <div class="geschichte">
       <div class="img">
         <img src="/imgs/geschichten/glück_auf.jpg" alt="">
         <img src="/imgs/geschichten/glück_auf/1.jpg" alt="">
@@ -135,8 +156,9 @@
       </div>
       <div class="text">
         <div class="content">
-          <h3>Löffelweise <br>
-            Glück auf!</h3>
+          Löffelweise <br>
+          <br>
+          <h3>Glück auf!</h3>
           <br>
           Westfalen - zwei Extreme, die jeweils ihren ganz eigenen CHARME ausstrahlen! <br>
  <br>
