--- a/loeffelfreunde/index.html
+++ b/loeffelfreunde/index.html
@@ -32,50 +32,19 @@
     </div>
     <div id="itemContainer">
       <div class="item">
-        <img src="/imgs/löffelfreunde/basics.jpg" alt="">
+        <img src="/imgs/löffelfreunde/outdoorküche.jpg" alt="">
         <div class="text">
           <div class="content">
-            <h3>UNSERE BASICS</h3>
-            zum Löffelglück...<br>
+            DIY - Bau einer Outdoorküche:<br>
             <br>
-            <h4>PERSONENANZAHL</h4>
-            Unsere kleine Familie besteht aus vier Personen. Dementsprechend sind auch die meisten unserer Rezepte für VIER PORTIONEN konzipiert, falls nicht anders angegeben. Mengenangaben können jedoch jederzeit für andere Portionsgrößen angepasst werden.<br>
+            <h3>Von Sandkörnern & Pizzasteinen...</h3>
             <br>
-            <h4>MASSE</h4>
-            In unseren Rezepten arbeiten wir oft mit Löffeln, Tassen, Messerspitzen, Handvoll... Natürlich lebt jede Küche von dem ganz eigenen, persönlichen Spielraum und der kreativen INDIVIDUELLEN Würze. Als grobe Richtschnur möchten wir gern folgende EMPFEHLUNG aussprechen: <br>
-            1 Esslöffel =  15 g <br>
-            1 Teelöffel =   5 g <br>
-            1 Tasse     = 150 ml <br>
-            <br>
-            <h4>BACKOFEN</h4>
-            Jeder Ofen backt anders. Anders als in unseren Rezepten angegeben, kann der Backofen demnach eine längere oder kürzere Backzeit erfordern. Unsere Zeitangaben sind daher als Empfehlung zu verstehen. Sollte es im Rezept nicht anders vermerkt sein, garen & backen wir unsere Speisen stets im UMLUFT-Modus. <br>
-            <br>
-            <h4>MILCH</h4>
-            Am liebsten trinken und kochen wir mit VOLLMILCH. Der hohe Fettgehalt ist entscheidend für den Geschmack. <br>
-            Einen Tipp dazu noch zum Erwärmen von Milch: Spült man den Kochtopf zunächst mit Wasser aus - nicht trocknen - wird das Ansetzen der Milch am Boden verhindert. <br>
-            <br>
-            <h4>EIER</h4>
-            Wir verwenden gern große Eier - Größe L. Eier vom Markt sind jedoch oft sehr unterschiedlich groß. Erscheinen sie uns zu klein, nehmen wir auch gern einmal zwei anstatt einem Ei. Es kann einen großen Unterschied machen, wenn einem Gericht Ei fehlt. <br>
-            <br>
-            <h4>MEHL</h4>
-            Gern backen wir mit Dinkelmehl. Typ630 ist eins zu eins mit Weizenmehl Typ405 austauschbar und so können wir für alle unsere lieben Familienmitglieder & Freunde leckere Köstlichkeiten bereiten und nehmen auf ihre Unverträglichkeiten Rücksicht. <br>
-            <br>
-            <h4>ESSIG & ÖL</h4>
-            Gerade beim Essig - wie auch beim Senf - sollte man nicht sparen: teuer, aber wenig! Meist kommen wir mit wenigen Sorten aus. Balsamessig (italienischer Aceto balsamico) und Weinessig (weiß und rot). Für besondere Salate und feine Gerichte haben wir einen fruchtigen Himbeer- und auch Apfelessig im Haus, aber es gibt eine so große Fülle von Essigen, dass sicher für jeden Geschmack etwas dabei ist. <br>
-            <br>
-            Sauber, möglichst kaltgepresst, nativ, VERGINE" - das ist unser bevorzugtes Olivenöl. Wir finden, ein hochwertiges Öl schmeckt man heraus! Gern bringen wir es aus einem Urlaub direkt aus dem Anbaugebiet mit oder kaufen es in unserer Ölmühle, die für beste Qualität steht. Nach Anbruch steht es bei Zimmertemperatur im Dunklen. <br>
-            Für bestimmte Kompositionen ist ein Nussöl eine Delikatesse - Walnuss, Haselnuss,... Nach Anbruch bewahren wir diese unbedingt im Kühlschrank auf. <br>
-            <br>
-            <br>
-            <h4>FRISCHE KRÄUTER</h4>
-            Kräuter aus eigenem Anbau sind durch nichts zu toppen! Und deshalb lieben wir unser kleines Kräuterbeet ums Eck der Küchentür! Zu jeder Jahreszeit, bei jedem Wetter ernten wir hier alles, was wir für eine frische und abwechlungsreiche Küche benötigen! Die handelsüblichen Töpfe mit Basilikum sind für die Fensterbank gezüchtet, draußen wird die Pflanze oft schnell trocken und holzig. Deswegen pflanzen wir hier gern Thai-Basilikum. Die Blätter sind rötlich und etwas fester, garantieren aber von Frühjahr - nach den Eisheiligen - bis Herbst eine leckere Ernte. <br>
-            <br>
-            <h4>HIMMEL & ERDE</h4>
-            Diese Faustregel hilft bei der Entscheidung, ob GEMÜSE langsam in kaltem oder direkt in heißem Wasser erhitzt wird. Alles, was UNTER DER ERDE wächst, sollte langsam mit dem Wasser erwärmt und gekocht werden. Gemüse, was OBERIRDISCH wächst, sollte direkt in kochendem Wasser gegart werden. So bleiben die Vitamine bestmöglich erhalten. <br>
-            <br>
-            <h4>BLATTSALATE</h4>
-            Vor der Berührung mit der Sauce - eine Vinaigrette lässt den Salaten am besten den Eigengeschmack - sollten die Blätter trocken sein. Wir trocknen sie gern in unserer Salatschleuder, aber auch "trockenlegen" mit einem Küchentuch funktioniert prima. So nehmen sie den Geschmack besser an. <br>
-            Wichtig ebenfalls: Die Sauce erst unmittelbar vor dem Servieren unterziehen, sonst fällt der Salat zusammen und wird weich.
+            Als wir den maroden Kletterturm nebst Sandkasten aus Moritz & Jettes Kinderheitstagen abrissen, entstand in der von Buchen gerahmten Gartenecke viel Raum für neue Ideen. Die Familie wünschte sich einen Platz für schöne, gemeinsame Stunden: Mit einfachen Mitteln bauten wir eine kleine, allwettertaugliche Outdoorküche! <br>
+ <br>
+            Heimischer Wesersandstein fasst nun den Ort ein, Weserkies schafft Biergarten-Atmosphäre. Aus Beton-U-Profilen, Akazienküchenarbeitsplatte & Handtuchstange installierten wir einen Arbeitsblock. Neben einem großen Grill mit Seitenbrenner kann ebenfalls auf zwei Induktionsplatten gekocht werden. Wasser liefert uns eine hübsche Gießkanne, ein stilvoller Emaille-Eimer nimmt Biomüll & Gemüseabfälle auf.  <br>
+ <br>
+            Wenn aus Kindern Leute werden, können winzige Sandkörner manchmal auch zu großen Pizzasteinen erwachsen - anstatt Sandkuchen im Spielehaus backt Jette heute leckere Flammkuchen auf dem heißen Pizzastein. Besonders abends wird es am großen Teak-Esstisch nebenan gemütlich, denn unter der Solar-Lichterkette kann man bis lange in die Nacht hinein Karten spielen, quatschen, lachen... Glück genießen...
+
           </div>
         </div>
       </div>
@@ -83,6 +52,8 @@
         <img src="/imgs/löffelfreunde/rotkohl-eier.jpg" alt="">
         <div class="text">
           <div class="content">
+            DIY - Eier färben:<br>
+            <br>
             <h3>BLAUE STUNDE ZU OSTERN</h3><br>
             <br>
             Wir lieben es natürlich! Tatsächlich dekorieren wir zu Ostern gern mit weißen Eiern. Wenn wir sie uns allerdings ein bisschen bunter wünschen, greifen wir auf die Natur zurück. Selbst braune Eier lassen sich mit Rotkohl wunderschön blau färben! <br>
@@ -101,38 +72,6 @@
             Eine richtig tolle Wirkung erzielen die Eier, wenn man sie in natürlicher Umgebung dekoriert. Wir haben letzten Jahr ein verlassenes Vogelnest in unserem Garten gefunden, aber auch Heu von unseren Zwergkaninchen oder frisch gesammeltes Moos bietet eine tolle Kulisse. Frohe Ostern!
 
 
-          </div>
-        </div>
-      </div>
-      <div class="item">
-        <div class="img">
-          <img src="/imgs/löffelfreunde/mangold.jpg" alt="">
-          <img src="/imgs/löffelfreunde/kompost.jpg" alt="">
-          <img src="/imgs/löffelfreunde/wirsing.jpg" alt="">
-          <img src="/imgs/löffelfreunde/zuccini.jpg" alt="">
-        </div>
-        <div class="text">
-          <div class="content">
-            <h3>OPAS GARTEN</h3><br>
-            <br>
-            Alles, was unsere Genießerherzen höher schlagen lässt, wächst in Nachbars Garten.<br>
-            Unser lieber Opa HANS ist Gärtner. Gärtner mit ganz viel Herz - Bienenretter und Vogelschützer.
-            In seinem HIMMELREICH baut er alles an, was wir uns für unsere Kochideen wünschen:
-            In den Frühbeeten wachsen knackige Salate & gesundes Gemüse.<br>
-            Tomaten-Sommer im Gewächshaus. Reines Sonnenaroma. Unzählige Büsche und Bäume liefern ZUCKERSÜSSE Früchte und KERNIGE Nüsse. Lecker.
-            Lila Kartoffeln & bunte Möhren, gestreifte Bete & Mangold in Regenbogenfarben: unter- und überirdisch gut.
-            Auf dem Komposthaufen ranken Zucchini und Kürbisse in Herbsttönen.
-            Kohl in Eis & Schnee..<br>
-            Ganzjährig ist mit Opa gut Kirschen essen!
-            Auch, wenn er aufgrund seines Alters - Opa ist 80! - die Anbaufläche stetig reduziert:
-            Opas Garten DECKT UNSEREN TISCH!
-            Trotz kleiner Beete freuen wir uns über große Ernten. Professionelle Mischkulturen, Dünger vom Kompost und Brennessel-Sud
-            gegen Schädlinge garantieren Bio-Qualität. REGIONAL & SAISONAL... <br>
-            <br>
-            Ganz einfach:
-            Opa Hans, der kann's! Welch GLÜCK für uns...<br>
-            <br>
-            <a href="/rezepte/?search=%2523garten" target="_blank">Zu den Rezepten</a>
           </div>
         </div>
       </div>
@@ -199,7 +138,8 @@
         <img src="/imgs/löffelfreunde/weisse_weihnacht.jpg" alt="">
         <div class="text">
           <div class="content">
-            Löffelfreude für Löffelfreunde:
+            DIY - der etwas andere Präsentkorb:<br>
+            <br>
             <h3>WEISSE WEIHNACHT</h3>
             <br>
             Ein kulinarisches Geschenk der besonderen Art - wir verschenken ein GEFÜHL, eine Weiße Weihnacht! <br>
@@ -213,7 +153,7 @@
           </div>
         </div>
       </div>
-      <div class="item">
+      <div class="item" style="display: none;">
         <img src="/imgs/löffelfreunde/schokolöffel.jpg" alt="">
         <div class="text">
           <div class="content">
