--- a/nicole_jette/index.html
+++ b/nicole_jette/index.html
@@ -45,7 +45,7 @@
              <br>
             Mama ist ein totaler Familienmensch. Für ihre Lieben tut sie einfach alles, vor allen Dingen super lecker kochen! Kleine Dinge mit großer Liebe tun - so geht sie durch's Leben, gern durch den Wald. <br>
             Detailverliebt. Zu einem guten Essen gehört immer auch ein liebevoll gedeckter Tisch. <br>
-            Stets am Optimum, der Perfektion orientiert. Bei der Zubereitung von Essen bedeutet dies viele Vitamine aus Obst und Gemüse, maximale Frische und Bio-Qualität. Fertiggerichte sind tabu. Nach dem Essen heißt dies für Mama: nichts verkommen lassen oder wegschmeißen! Aus Lebensmittel-Resten zaubert sie Eintöpfe, Ketchup und Chutneys. Dabei kommt sie auf völlig skurile Marmeladen-Kombinationen: Erdbeer mit rosa Pfeffer, Aprikose-Lavendel, Ananas-Rosmarin oder Birne-Thymian.<br> Phantastisch!  <br>
+            Stets am Optimum, der Perfektion orientiert. Bei der Zubereitung von Essen bedeutet dies viele Vitamine aus Obst und Gemüse, maximale Frische und Bio-Qualität. Fertiggerichte sind tabu. Nach dem Essen heißt dies für Mama: nichts verkommen lassen oder wegschmeißen! Aus Lebensmittel-Resten zaubert sie Eintöpfe, Ketchup und Chutneys. Dabei kommt sie auf völlig skurrile Marmeladen-Kombinationen: Erdbeer mit rosa Pfeffer, Aprikose-Lavendel, Ananas-Rosmarin oder Birne-Thymian.<br> Phantastisch!  <br>
              <br>
              <br>
             <h3>WESTFÄLISCHER APFELWURM. RENNRADLERIN.<br> LATTE MACCHIATORIN.</h3> <br>
@@ -86,7 +86,7 @@
             Neugierig wagt sie sich an allerhand neue Rezepte und experimentiert an eigenen Kreationen. Nur eines müsst Ihr wissen: Ein Kuchen ohne Schokolade ist  <br>
             für Jette kein Kuchen! Passionierte Naschkatze und Zuckerbäckerin. Süß geht immer. Es gibt soooo viele schöne Fotos, die Jette mit blonden Locken und Schokomund zeigen... <br>
             Wenn du aber glaubst, dass Jette auch auf "scharf" steht, warst du nicht mit ihr in Thailand! Chili & Pepper heißen unsere Zwergkaninchen. Sie sind sehr zutraulich.  <br>
-            Durch ihre Tolpatschigkeit bringen sie uns immer wieder zum Lachen. Ein tolles Kinoprogramm zur Sommerzeit. Stets freuen sie sich über unsere Gemüseabfälle aus der  <br>
+            Durch ihre Tollpatschigkeit bringen sie uns immer wieder zum Lachen. Ein unterhaltsames Kinoprogramm zur Sommerzeit. Stets freuen sie sich über unsere Gemüseabfälle aus der  <br>
             Küche. Zum Kartoffel schälen und Möhren schrappen setzt sich Jette heute zwar nicht mehr auf die Arbeitsplatte, aber das stumpfe Messer als Relikt vergangener Tage  <br>
             gibt es noch immer. Es ist geblieben wie Jettes Leidenschaft zum Kochen und Backen!<br>
             <br>
@@ -104,39 +104,6 @@
         </div>
       </div>
 
-      <div class="item">
-        <img src="/imgs/nicole_jette/homemade.jpg" alt="">
-        <div class="text">
-          <div class="content">
-            <h3>EST. 2020</h3><br>
-            <br>
-            Kennst du das? Du hast eine IDEE. Aus der Situation heraus stellen sich Fragen. Auf der Suche nach Antworten erhältst du neue INSPIRATIONEN.
-            Gedanken verselbstständigen sich. Die kleine Idee wird groß und größer. Die FREUDE in dir wächst! <br>
-            <br>
-            So war es auch mit unserem BLOG. <br>
-            <br>
-            Entstanden als sinnbringende Beschäftigung in der #WirBleibenZuhause-Corona-Zeit. Bei aller Sorge um Gesundheit, Familie, Schule, Job freuten wir uns aber auch
-            über die GESCHENKTE ZUSAMMENZEIT. Wir freuten uns auf spielen, lesen, lachen... und auf KOCHEN & BACKEN!  <br>
-            <br>
-            "Eine gute Küche ist das Fundament jeden Glücks." <br>
-            (Auguste Escoffier, Guide Culinaire 1847- 1935) <br>
-            <br>
-            Wir hatten richtig Lust, neue Rezepte auszuprobieren, zu experimentieren und uns gegenseitig mit LECKEREIEN zu verwöhnen. ALLES HOMEMADE!
-            Weil viele tolle Gerichte gelangen, sooooooo lecker schmeckten, war schnell die Idee entstanden, unsere Kreationen auf Instagram zu posten:
-            WIR machten viele schöne Fotos, wollten erst einmal sammeln.... <br>
-            <br>
-            Im Herbst dann die Fragen: Wie sieht eigentlich ein Insta-Foodblog aus? Wie funktioniert er? Wie finden Foto und Rezept zusammen?
-            Geflashed von den großartigen Seiten vieler Blogger, von den Events, die wir entdeckten, von den Communities, die sich gefunden hatten,
-            verspürten wir ebenfalls den Wunsch, nicht nur quadratische Fotografien auf Instagram zu posten, sondern eine RICHTIGE Internetseite zu gestalten.
-            Gedanken verselbstständigten sich. Die kleine Idee wurde groß und größer. Die Freude in uns wuchs, denn nun hatten wir auch unsere Männer Moritz (Sohn & Bruder)
-            und Thorsten (Ehemann & Vater) infiziert. Ein kostbares Familienprojekt: Moritz programmiert, Thorsten baut kleine Kulissen.
-            Entlohnt wird in Naturalien: LÖFFELWEISE GLÜCK! <br>
-            <br>
-            Wir erheben keinen Anspruch auf Professionalität, haben einfach Spaß! Die gemeinsame Zeit genießen wir!
-            Gespannt sind wir auf das, was sich aus unserem kleinen Projekt - EST. 2020 - entwickeln wird...
-          </div>
-        </div>
-      </div>
       <div class="item">
         <img src="/imgs/nicole_jette/löffel_glück.jpg" alt="">
         <div class="text">
@@ -172,6 +139,86 @@
         </div>
       </div>
       <div class="item">
+        <img src="/imgs/löffelfreunde/basics.jpg" alt="">
+        <div class="text">
+          <div class="content">
+            <h3>UNSERE BASICS</h3>
+            zum Löffelglück...<br>
+            <br>
+            <h4>PERSONENANZAHL</h4>
+            Unsere kleine Familie besteht aus vier Personen. Dementsprechend sind auch die meisten unserer Rezepte für VIER PORTIONEN konzipiert, falls nicht anders angegeben. Mengenangaben können jedoch jederzeit für andere Portionsgrößen angepasst werden.<br>
+            <br>
+            <h4>MASSE</h4>
+            In unseren Rezepten arbeiten wir oft mit Löffeln, Tassen, Messerspitzen, Handvoll... Natürlich lebt jede Küche von dem ganz eigenen, persönlichen Spielraum und der kreativen INDIVIDUELLEN Würze. Als grobe Richtschnur möchten wir gern folgende EMPFEHLUNG aussprechen: <br>
+            1 Esslöffel =  15 g <br>
+            1 Teelöffel =   5 g <br>
+            1 Tasse     = 150 ml <br>
+            <br>
+            <h4>BACKOFEN</h4>
+            Jeder Ofen backt anders. Anders als in unseren Rezepten angegeben, kann der Backofen demnach eine längere oder kürzere Backzeit erfordern. Unsere Zeitangaben sind daher als Empfehlung zu verstehen. Sollte es im Rezept nicht anders vermerkt sein, garen & backen wir unsere Speisen stets im UMLUFT-Modus. <br>
+            <br>
+            <h4>MILCH</h4>
+            Am liebsten trinken und kochen wir mit VOLLMILCH. Der hohe Fettgehalt ist entscheidend für den Geschmack. <br>
+            Einen Tipp dazu noch zum Erwärmen von Milch: Spült man den Kochtopf zunächst mit Wasser aus - nicht trocknen - wird das Ansetzen der Milch am Boden verhindert. <br>
+            <br>
+            <h4>EIER</h4>
+            Wir verwenden gern große Eier - Größe L. Eier vom Markt sind jedoch oft sehr unterschiedlich groß. Erscheinen sie uns zu klein, nehmen wir auch gern einmal zwei anstatt einem Ei. Es kann einen großen Unterschied machen, wenn einem Gericht Ei fehlt. <br>
+            <br>
+            <h4>MEHL</h4>
+            Gern backen wir mit Dinkelmehl. Typ630 ist eins zu eins mit Weizenmehl Typ405 austauschbar und so können wir für alle unsere lieben Familienmitglieder & Freunde leckere Köstlichkeiten bereiten und nehmen auf ihre Unverträglichkeiten Rücksicht. <br>
+            <br>
+            <h4>ESSIG & ÖL</h4>
+            Gerade beim Essig - wie auch beim Senf - sollte man nicht sparen: teuer, aber wenig! Meist kommen wir mit wenigen Sorten aus. Balsamessig (italienischer Aceto balsamico) und Weinessig (weiß und rot). Für besondere Salate und feine Gerichte haben wir einen fruchtigen Himbeer- und auch Apfelessig im Haus, aber es gibt eine so große Fülle von Essigen, dass sicher für jeden Geschmack etwas dabei ist. <br>
+            <br>
+            Sauber, möglichst kaltgepresst, nativ, VERGINE" - das ist unser bevorzugtes Olivenöl. Wir finden, ein hochwertiges Öl schmeckt man heraus! Gern bringen wir es aus einem Urlaub direkt aus dem Anbaugebiet mit oder kaufen es in unserer Ölmühle, die für beste Qualität steht. Nach Anbruch steht es bei Zimmertemperatur im Dunklen. <br>
+            Für bestimmte Kompositionen ist ein Nussöl eine Delikatesse - Walnuss, Haselnuss,... Nach Anbruch bewahren wir diese unbedingt im Kühlschrank auf. <br>
+            <br>
+            <br>
+            <h4>FRISCHE KRÄUTER</h4>
+            Kräuter aus eigenem Anbau sind durch nichts zu toppen! Und deshalb lieben wir unser kleines Kräuterbeet ums Eck der Küchentür! Zu jeder Jahreszeit, bei jedem Wetter ernten wir hier alles, was wir für eine frische und abwechlungsreiche Küche benötigen! Die handelsüblichen Töpfe mit Basilikum sind für die Fensterbank gezüchtet, draußen wird die Pflanze oft schnell trocken und holzig. Deswegen pflanzen wir hier gern Thai-Basilikum. Die Blätter sind rötlich und etwas fester, garantieren aber von Frühjahr - nach den Eisheiligen - bis Herbst eine leckere Ernte. <br>
+            <br>
+            <h4>HIMMEL & ERDE</h4>
+            Diese Faustregel hilft bei der Entscheidung, ob GEMÜSE langsam in kaltem oder direkt in heißem Wasser erhitzt wird. Alles, was UNTER DER ERDE wächst, sollte langsam mit dem Wasser erwärmt und gekocht werden. Gemüse, was OBERIRDISCH wächst, sollte direkt in kochendem Wasser gegart werden. So bleiben die Vitamine bestmöglich erhalten. <br>
+            <br>
+            <h4>BLATTSALATE</h4>
+            Vor der Berührung mit der Sauce - eine Vinaigrette lässt den Salaten am besten den Eigengeschmack - sollten die Blätter trocken sein. Wir trocknen sie gern in unserer Salatschleuder, aber auch "trockenlegen" mit einem Küchentuch funktioniert prima. So nehmen sie den Geschmack besser an. <br>
+            Wichtig ebenfalls: Die Sauce erst unmittelbar vor dem Servieren unterziehen, sonst fällt der Salat zusammen und wird weich.
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <div class="img">
+          <img src="/imgs/löffelfreunde/mangold.jpg" alt="">
+          <img src="/imgs/löffelfreunde/kompost.jpg" alt="">
+          <img src="/imgs/löffelfreunde/wirsing.jpg" alt="">
+          <img src="/imgs/löffelfreunde/zuccini.jpg" alt="">
+        </div>
+        <div class="text">
+          <div class="content">
+            <h3>OPAS GARTEN</h3><br>
+            <br>
+            Alles, was unsere Genießerherzen höher schlagen lässt, wächst in Nachbars Garten.<br>
+            Unser lieber Opa HANS ist Gärtner. Gärtner mit ganz viel Herz - Bienenretter und Vogelschützer.
+            In seinem HIMMELREICH baut er alles an, was wir uns für unsere Kochideen wünschen:
+            In den Frühbeeten wachsen knackige Salate & gesundes Gemüse.<br>
+            Tomaten-Sommer im Gewächshaus. Reines Sonnenaroma. Unzählige Büsche und Bäume liefern ZUCKERSÜSSE Früchte und KERNIGE Nüsse. Lecker.
+            Lila Kartoffeln & bunte Möhren, gestreifte Bete & Mangold in Regenbogenfarben: unter- und überirdisch gut.
+            Auf dem Komposthaufen ranken Zucchini und Kürbisse in Herbsttönen.
+            Kohl in Eis & Schnee..<br>
+            Ganzjährig ist mit Opa gut Kirschen essen!
+            Auch, wenn er aufgrund seines Alters - Opa ist 80! - die Anbaufläche stetig reduziert:
+            Opas Garten DECKT UNSEREN TISCH!
+            Trotz kleiner Beete freuen wir uns über große Ernten. Professionelle Mischkulturen, Dünger vom Kompost und Brennessel-Sud
+            gegen Schädlinge garantieren Bio-Qualität. REGIONAL & SAISONAL... <br>
+            <br>
+            Ganz einfach:
+            Opa Hans, der kann's! Welch GLÜCK für uns...<br>
+            <br>
+            <a href="/rezepte/?search=%2523garten" target="_blank">Zu den Rezepten</a>
+          </div>
+        </div>
+      </div>
+      <div class="item">
         <img src="/imgs/nicole_jette/antrieb.jpg" alt="">
         <div class="text">
           <div class="content">
@@ -182,7 +229,7 @@
             <br>
             Unser Glitzer sind GUTE ZUTATEN!<br>
             Wir achten sehr genau darauf, woher unsere Lebensmittel stammen. Gemüse ernten wir natürlich am liebsten in Opas Garten. Für alles andere schätzen wir kurze Wege und persönliche Kontakte. Das ist das Wunderbare auf dem Land - man kennt sich! <br>
-            Wir wissen, wo und wie die Tiere leben, die wir verzehren, können sie jederzeit im Stall besuchen. Eier gibt's im HOFLADEN. Artgerechte Haltung. Stammen die Fische nicht aus Nachbars Forellenteich, achten wir auf Label für nachhaltige Fischerei. Auch kleine Käsereien garantieren Vielfalt und Frische. Aus der Ölmühle am Solling beziehen wir tolle, selbstgepresste Öle und viele Hobby-Imker zählen zu unseren Freunden. Gemüse kaufen wir gern auf dem Wochenmarkt oder bei unserem Bio-Bauern vor Ort. <br>
+            Wir wissen, wo und wie die Tiere leben, die wir verzehren, können sie jederzeit im Stall besuchen. Eier gibt's im HOFLADEN. Artgerechte Haltung. Stammen die Fische nicht aus Nachbars Forellenteich, achten wir auf Label für nachhaltige Fischerei. Auch kleine Käsereien garantieren Vielfalt und Frische. Aus der Ölmühle beziehen wir tolle, selbstgepresste Öle und viele Hobby-Imker zählen zu unseren Freunden. Gemüse kaufen wir gern auf dem Wochenmarkt oder bei unserem Bio-Bauern vor Ort. <br>
             Aus REGIONAL folgt SAISONAL! <br>
             Exotische Zutaten sind bei uns eher die Ausnahme.<br>
             <br>
@@ -208,6 +255,40 @@
 
 
 
+          </div>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="/imgs/nicole_jette/homemade.jpg" alt="">
+        <div class="text">
+          <div class="content">
+            <h3>EST. 2020</h3><br>
+            <br>
+            Kennst du das? Du hast eine IDEE. Aus der Situation heraus stellen sich Fragen. Auf der Suche nach Antworten erhältst du neue INSPIRATIONEN.
+            Gedanken verselbstständigen sich. Die kleine Idee wird groß und größer. Die FREUDE in dir wächst! <br>
+            <br>
+            So war es auch mit unserem BLOG. <br>
+            <br>
+            Entstanden als sinnbringende Beschäftigung in der #WirBleibenZuhause-Corona-Zeit. Bei aller Sorge um Gesundheit, Familie, Schule, Job freuten wir uns aber auch
+            über die GESCHENKTE ZUSAMMENZEIT. Wir freuten uns auf spielen, lesen, lachen... und auf KOCHEN & BACKEN!  <br>
+            <br>
+            "Eine gute Küche ist das Fundament jeden Glücks." <br>
+            (Auguste Escoffier, Guide Culinaire 1847- 1935) <br>
+            <br>
+            Wir hatten richtig Lust, neue Rezepte auszuprobieren, zu experimentieren und uns gegenseitig mit LECKEREIEN zu verwöhnen. ALLES HOMEMADE!
+            Weil viele tolle Gerichte gelangen, sooooooo lecker schmeckten, war schnell die Idee entstanden, unsere Kreationen auf Instagram zu posten:
+            WIR machten viele schöne Fotos, wollten erst einmal sammeln.... <br>
+            <br>
+            Im Herbst dann die Fragen: Wie sieht eigentlich ein Insta-Foodblog aus? Wie funktioniert er? Wie finden Foto und Rezept zusammen?
+            Geflashed von den großartigen Seiten vieler Blogger, von den Events, die wir entdeckten, von den Communities, die sich gefunden hatten,
+            verspürten wir ebenfalls den Wunsch, nicht nur quadratische Fotografien auf Instagram zu posten, sondern eine RICHTIGE Internetseite zu gestalten.
+            Gedanken verselbstständigten sich. Die kleine Idee wurde groß und größer. Die Freude in uns wuchs, denn nun hatten wir auch unsere Männer Moritz (Sohn & Bruder)
+            und Thorsten (Ehemann & Vater) infiziert. Ein kostbares Familienprojekt: Moritz programmiert, Thorsten baut kleine Kulissen.
+            Entlohnt wird in Naturalien: LÖFFELWEISE GLÜCK! <br>
+            <br>
+            Wir erheben keinen Anspruch auf Professionalität, haben einfach Spaß! Die gemeinsame Zeit genießen wir!
+            Gespannt sind wir auf das, was sich aus unserem kleinen Projekt - EST. 2020 - entwickeln wird...
           </div>
         </div>
       </div>
